# cas-jobs-sdss-mcp

./: .dockerignore  Dockerfile  MANIFEST.in  Makefile  README.md  database_names.csv  pyproject.toml  x_match_docs.csv
.github/workflows/: ci.yml  dist.yml
cas_sdss_mcp/: __init__.py  app.py
cas_sdss_mcp/app/: main.py
cas_sdss_mcp/data/: database_names.parquet  tbls_cols.parquet  x_match_fns.parquet
docs/source/: conf.py
notebooks/: explore.ipynb
requirements/: docs.txt  prd.txt  test.txt
tests/: test_util.py
