
[project]
name = "cas_sdss_mcp"  # Replace cas_sdss_mcp with actual name (it's just a template).
dynamic = ["version"]
authors = [
    {name = "JHU Data Science and AI Institute", email = "ai@jhu.edu"},
]
description = "An MCP service for building queries against SDSS catalogs."
readme = "README.md"
license-files = ["LICENSE"]


requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
]

[project.urls]
homepage = "https://github.com/idies/cas-jobs-sdss-mcp"
documentation = "https://github.com/idies/cas-jobs-sdss-mcp"
repository = "https://github.com/idies/cas-jobs-sdss-mcp"

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true
exclude-package-data = {"*" = [
    "tests/*",
    "docs/*",
    ".github/*",
    ".coveragerc",
    ".gitignore",
    ".zenodo.json",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "MANIFEST.in",
    "CODEOWNERS",
    "README.md",
    "codecov.yml",
    "sqlxmatch_data.json",
    "Makefile",
]}



[tool.setuptools.packages.find]
include = ["cas_sdss_mcp*"]
exclude = ["*.tests*"]

[tool.setuptools_scm]
write_to = "cas_sdss_mcp/_version.py"

[project.scripts]
cas_sdss_mcp = "cas_sdss_mcp.app:main"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "ANN002",  # https://docs.astral.sh/ruff/rules/missing-type-args/
    "ANN003",  # https://docs.astral.sh/ruff/rules/missing-type-kwargs/
    "ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "EM101",  # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102",  # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "D407",  # https://docs.astral.sh/ruff/rules/dashed-underline-after-section/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "venv",
    "_version.py"
]
target-version = "py311"

[tool.ruff.lint.pydocstyle] # https://docs.astral.sh/ruff/settings/#lint_pydocstyle_convention
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/test{s,}/*.py" = [
    "S101",  # https://docs.astral.sh/ruff/rules/assert/
    "D",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "ARG001",  # https://docs.astral.sh/ruff/rules/unused-function-argument/
    "INP",  # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # https://docs.astral.sh/ruff/settings/#lint_flake8-quotes_docstring-quotes
inline-quotes = "double"  # https://docs.astral.sh/ruff/settings/#lint_flake8-quotes_inline-quotes
multiline-quotes = "double"  # https://docs.astral.sh/ruff/settings/#lint_flake8-quotes_multiline-quotes

[dependency-groups]
build = [
    "setuptools==80.9.0",
]
docs = [
    "nbsphinx==0.9.7",
    "sphinx-automodapi==0.19.0",
    "sphinx-rtd-theme==3.0.2",
]
prd = [
    "mcp[cli]>=1.21.1",
    "pandas==2.3.3",
    "pip==25.3",
    "pyarrow==22.0.0",
    "requests==2.32.5",
]
test = [
    "pytest==8.3.5",
    "ruff==0.11.12",
]
all = [
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "prd"},
    {include-group = "test"},
]
